[gd_scene load_steps=3 format=2]

[ext_resource path="res://Testworld.gd" type="Script" id=1]
[ext_resource path="res://item_energy.tscn" type="PackedScene" id=2]

[node name="Testworld" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -499.0
margin_top = -289.0
margin_right = -422.0
margin_bottom = -240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_right = 460.0
margin_bottom = 296.0

[node name="HSlider" type="HSlider" parent="Control/Panel"]
margin_right = 376.0
margin_bottom = 16.0
max_value = 500.0
value = 293.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="outside_K" type="Label" parent="Control/Panel"]
margin_left = 51.0
margin_top = 21.0
margin_right = 120.0
margin_bottom = 52.0
text = "Outside K:"

[node name="outside_K_value" type="Label" parent="Control/Panel"]
margin_left = 123.678
margin_top = 21.0
margin_right = 192.678
margin_bottom = 52.0
text = "---"

[node name="item_K" type="Label" parent="Control/Panel"]
margin_left = 312.813
margin_top = 79.2502
margin_right = 403.813
margin_bottom = 93.2502
text = "---"

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="item_base" parent="." instance=ExtResource( 2 )]
[connection signal="value_changed" from="Control/Panel/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="temperature_changed" from="item_base" to="." method="_on_item_base_temperature_changed"]
